--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,32 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+# Build output directories
+dist/
+dist-ssr/
+
+# Local environment files
 *.local
+
+# Environment files
+.env
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
+
+# macOS-specific files
 .DS_Store
+
+# Windows-specific files
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+
+# Other potential editor files
 *.sw?
